--- a/src/main/resources/Templates/School/Subject/addFormSubject.html
+++ b/src/main/resources/Templates/School/Subject/addFormSubject.html
@@ -20,17 +20,101 @@
         <div>
             <label>Subject Name: </label>
             <select th:field="*{nameSubject}" required>
-                <option th:value="Literature">Literature</option>
-                <option th:value="Math">Math</option>
-                <option th:value="History">History</option>
-                <option th:value="Geography">Geography</option>
-                <option th:value="Biology">Biology</option>
+                <option th:value="Literature1">Literature 1</option>
+                <option th:value="Literature2">Literature 2</option>
+                <option th:value="Literature3">Literature 3</option>
+                <option th:value="Literature4">Literature 4</option>
+                <option th:value="Literature5">Literature 5</option>
+                <option th:value="Literature6">Literature 6</option>
+                <option th:value="Literature7">Literature 7</option>
+                <option th:value="Literature8">Literature 8</option>
+                <option th:value="Literature9">Literature 9</option>
+                <option th:value="Literature10">Literature 10</option>
+                <option th:value="Literature11">Literature 11</option>
+                <option th:value="Literature12">Literature 12</option>
+                <option th:value="Math1">Math 1</option>
+                <option th:value="Math2">Math 2</option>
+                <option th:value="Math3">Math 3</option>
+                <option th:value="Math4">Math 4</option>
+                <option th:value="Math5">Math 5</option>
+                <option th:value="Math6">Math 6</option>
+                <option th:value="Math7">Math 7</option>
+                <option th:value="Math8">Math 8</option>
+                <option th:value="Math9">Math 9</option>
+                <option th:value="Math10">Math 10</option>
+                <option th:value="Math11">Math 11</option>
+                <option th:value="Math12">Math 12</option>
+                <option th:value="History1">History 1</option>
+                <option th:value="History2">History 2</option>
+                <option th:value="History3">History 3</option>
+                <option th:value="History4">History 4</option>
+                <option th:value="History5">History 5</option>
+                <option th:value="History6">History 6</option>
+                <option th:value="History7">History 7</option>
+                <option th:value="History8">History 8</option>
+                <option th:value="History9">History 9</option>
+                <option th:value="History10">History 10</option>
+                <option th:value="History11">History 11</option>
+                <option th:value="History12">History 12</option>
+                <option th:value="Geography1">Geography 1</option>
+                <option th:value="Geography2">Geography 2</option>
+                <option th:value="Geography3">Geography 3</option>
+                <option th:value="Geography4">Geography 4</option>
+                <option th:value="Geography5">Geography 5</option>
+                <option th:value="Geography6">Geography 6</option>
+                <option th:value="Geography7">Geography 7</option>
+                <option th:value="Geography8">Geography 8</option>
+                <option th:value="Geography9">Geography 9</option>
+                <option th:value="Geography10">Geography 10</option>
+                <option th:value="Geography11">Geography 11</option>
+                <option th:value="Geography12">Geography 12</option>
+                <option th:value="Biology6">Biology 6</option>
+                <option th:value="Biology7">Biology 7</option>
+                <option th:value="Biology8">Biology 8</option>
+                <option th:value="Biology9">Biology 9</option>
+                <option th:value="Biology10">Biology 10</option>
+                <option th:value="Biology11">Biology 11</option>
+                <option th:value="Biology12">Biology 12</option>
                 <option th:value="Chemistry">Chemistry</option>
-                <option th:value="Civic-Education">Civic Education</option>
+                <option th:value="Civic-Education1">Civic Education 1</option>
+                <option th:value="Civic-Education2">Civic Education 2</option>
+                <option th:value="Civic-Education3">Civic Education 3</option>
+                <option th:value="Civic-Education4">Civic Education 4</option>
+                <option th:value="Civic-Education5">Civic Education 5</option>
+                <option th:value="Civic-Education6">Civic Education 6</option>
+                <option th:value="Civic-Education7">Civic Education 7</option>
+                <option th:value="Civic-Education8">Civic Education 8</option>
+                <option th:value="Civic-Education9">Civic Education 9</option>
+                <option th:value="Civic-Education10">Civic Education 10</option>
+                <option th:value="Civic-Education11">Civic Education 11</option>
+                <option th:value="Civic-Education12">Civic Education 12</option>
                 <option th:value="Music">Music</option>
-                <option th:value="Physical-Education">Physical Education</option>
-                <option th:value="Foreign-Language">Foreign Language</option>
-                <option th:value="Information-Technology">Information Technology</option>
+                <option th:value="Physical-Education6">Physical Education 6</option>
+                <option th:value="Physical-Education7">Physical Education 7</option>
+                <option th:value="Physical-Education8">Physical Education 8</option>
+                <option th:value="Physical-Education9">Physical Education 9</option>
+                <option th:value="Physical-Education10">Physical Education 10</option>
+                <option th:value="Physical-Education11">Physical Education 11</option>
+                <option th:value="Physical-Education12">Physical Education 12</option>
+                <option th:value="English-Language1">English Language 1</option>
+                <option th:value="English-Language2">English Language 2</option>
+                <option th:value="English-Language3">English Language 3</option>
+                <option th:value="English-Language4">English Language 4</option>
+                <option th:value="English-Language5">English Language 5</option>
+                <option th:value="English-Language6">English Language 6</option>
+                <option th:value="English-Language7">English Language 7</option>
+                <option th:value="English-Language8">English Language 8</option>
+                <option th:value="English-Language9">English Language 9</option>
+                <option th:value="English-Language10">English Language 10</option>
+                <option th:value="English-Language11">English Language 11</option>
+                <option th:value="English-Language12">English Language 12</option>
+                <option th:value="Information-Technology6">Information Technology 6</option>
+                <option th:value="Information-Technology7">Information Technology 7</option>
+                <option th:value="Information-Technology8">Information Technology 8</option>
+                <option th:value="Information-Technology9">Information Technology 9</option>
+                <option th:value="Information-Technology10">Information Technology 10</option>
+                <option th:value="Information-Technology11">Information Technology 11</option>
+                <option th:value="Information-Technology12">Information Technology 12</option>
             </select>
             <div th:if="${#fields.hasErrors('nameSubject')}">
                 <ul>
