--- a/src/main/resources/Templates/Teacher/modifyFormTeacher.html
+++ b/src/main/resources/Templates/Teacher/modifyFormTeacher.html
@@ -86,13 +86,15 @@
             </div>
         </div>
 
-        <div>
-            <label for="schoolid">Teacher work at school id: </label>
-            <input type="text" th:field="*{school}" placeholder="Input school id"
-                   name="schoolid" id="schoolid">
+        <div class="form-floating mb-1">
+            <label class="form-label">Work at school: </label>
+            <select th:field="*{school}" required>
+                <option value="">--Select School--</option>
+                <option th:each="school : ${schoolList}" th:value="${school.id}" th:text="${school.name}"></option>
+            </select>
             <div th:if="${#fields.hasErrors('school')}">
                 <ul>
-                    <li th:each="error: ${#fields.hasErrors('school')}" th:text="${error}"></li>
+                    <li th:each="error: ${#fields.hasErrors('school')}" th:text="${error"></li>
                 </ul>
             </div>
         </div>
@@ -102,7 +104,7 @@
             <label class="form-label" for="class">Class name: </label>
             <div th:if="${#fields.hasErrors('classesList')}">
                 <ul>
-                    <li th:each="e: ${#fields.hasErrors('classesList')}" th:text="${e}"></li>
+                    <li th:each="error: ${#fields.hasErrors('classesList')}" th:text="${error}"></li>
                 </ul>
             </div>
         </div>
