--- a/src/main/resources/Templates/home.html
+++ b/src/main/resources/Templates/home.html
@@ -96,31 +96,34 @@
             <a sec:authorize="hasRole('ADMIN')" class="btn btn-primary" th:href="@{/api-school/showManageSchool}">School Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasAnyRole('MANAGER','ADMIN')" class="btn btn-primary" th:href="@{/m-teacher/showManageTeacher}">Teacher manage</a>
+            <a sec:authorize="hasAnyRole('MANAGER','ADMIN')" class="btn btn-primary" th:href="@{/m-teacher/showManageTeacher}">Teacher Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasAnyRole('MANAGER','ADMIN', 'TEACHER')"  class="btn btn-primary" th:href="@{/m-student/showManageStudent}">Student manage</a>
+            <a sec:authorize="hasAnyRole('MANAGER','ADMIN', 'TEACHER')"  class="btn btn-primary" th:href="@{/m-student/showManageStudent}">Student Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasAnyRole('MANAGER','ADMIN', 'TEACHER')"  class="btn btn-primary" th:href="@{/m-parent/showManageParent}">Parent manage</a>
+            <a sec:authorize="hasAnyRole('MANAGER','ADMIN', 'TEACHER')"  class="btn btn-primary" th:href="@{/m-parent/showManageParent}">Parent Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasAnyRole('MANAGER','ADMIN')"  class="btn btn-primary" th:href="@{/m-user/showManageUser}">User manage</a>
+            <a sec:authorize="hasAnyRole('MANAGER','ADMIN')"  class="btn btn-primary" th:href="@{/m-user/showManageUser}">User Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-class/showManageClass}">Class manage</a>
+            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-class/showManageClass}">Class Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-note/showManageNotebook}">NoteBook manage</a>
+            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-note/showManageNotebook}">NoteBook Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-subject/showManageSubject}">Subject manage</a>
+            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-subject/showManageSubject}">Subject Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-transcript/showManageTranscript}">Transcript manage</a>
+            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-transcript/showManageTranscript}">Transcript Manage</a>
         </div>
         <div class="mt-1">
-            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-study/showManageStudyRecord}">StudyRecord manage</a>
+            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-study/showManageStudyRecord}">StudyRecord Manage</a>
+        </div>
+        <div class="mt-1">
+            <a sec:authorize="hasRole('ADMIN')"  class="btn btn-primary" th:href="@{/m-score-card/showManageScoreCard}">ScoreCard Manage</a>
         </div>
     </div>
 </div>
