--- a/src/main/resources/Templates/Teacher/modifyFormTeacher.html
+++ b/src/main/resources/Templates/Teacher/modifyFormTeacher.html
@@ -113,12 +113,12 @@
         </div>
     </form>
     <div th:if="${success}">
-        <h3>You updated a school "<span th:text="${success}"></span> ",</h3>
+        <h3>You updated a Teacher "<span th:text="${success}"></span> ",</h3>
     </div>
 </div>
 <div>
     <a class="btn btn-primary" th:href="@{/backHomepage}">Return HomePage</a>
-    <a class="btn btn-primary" th:href="@{/m-teacher/showManageTeacher}">School List Manage</a>
+    <a class="btn btn-primary" th:href="@{/m-teacher/showManageTeacher}">Teacher List Manage</a>
 </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
