--- a/src/main/resources/Templates/School/Subject/ScoreCard/modifyFormScoreCard.html
+++ b/src/main/resources/Templates/School/Subject/ScoreCard/modifyFormScoreCard.html
@@ -53,7 +53,7 @@
         <div>
             <label>School Year: </label>
             <select th:field="*{schoolYear}">
-                <option value="">--Select SchoolYear--</option>
+                <option value="#">--Select SchoolYear--</option>
                 <option th:value="2021_2022">2021-2022</option>
                 <option th:value="2022_2023">2022-2023</option>
                 <option th:value="2023_2024">2023-2024</option>
