--- a/src/main/resources/Templates/login.html
+++ b/src/main/resources/Templates/login.html
@@ -35,26 +35,26 @@
 </head>
 <body>
 <div>
-    <h3>Hệ thống quản lý sinh viên</h3>
+    <h3>Student Management System</h3>
     <h4>Login</h4>
     <hr/>
 
     <form action="#" th:action="@{/authenticateTheUser}" method="POST">
         <div id="autoHide">
             <div th:if="${param.error}">
-                <span style="color:red">Login Failed,<br/> please check your username or password!</span>
+                <span>Login Failed,<br/> please check your username or password!</span>
             </div>
         </div>
         <!-- User name -->
         <div class="form-outline mb-4">
             <input type="text" name="username" id="form2Example1" class="form-control" />
-            <label class="form-label" for="form2Example1">Tài khoản</label>
+            <label class="form-label" for="form2Example1">Account Name</label>
         </div>
 
         <!-- Password input -->
         <div class="form-outline mb-4">
             <input type="password" name="password" id="form2Example2" class="form-control" />
-            <label class="form-label" for="form2Example2">Mật khẩu</label>
+            <label class="form-label" for="form2Example2">Password</label>
         </div>
 
         <!-- 2 column grid layout for inline styling -->
@@ -69,7 +69,7 @@
 
             <div class="col">
                 <!-- Simple link -->
-                <a href="#!">Quên mật khẩu?</a>
+                <a href="#!">Forgot Password ?</a>
             </div>
         </div>
 
